--- a/ui/index.html
+++ b/ui/index.html
@@ -49,7 +49,7 @@
                 <li><a href="index.html" class="current">Главная</a></li>
                 <li><a href="#">Подбор тура</a></li>
                 <li><a href="#">Каталог отелей</a></li>
-                <li><a href="#">Справочник</a></li>
+                <li><a href="guide.html">Справочник</a></li>
                 <li><a href="contact.html">Контакты</a></li>
             </ul>    	
     	</div> <!-- end of menu -->
@@ -315,11 +315,11 @@
     	<div class="footer_box">
         	<h3>Справочник</h3>
             <ul class="footer_menu">
-                <li><a href="#">Типы отдыха</a></li>
-                <li><a href="#">Визовая поддержка</a></li>
-                <li><a href="#">Трансферы</a></li>
-                <li><a href="#">Билеты</a></li>
-                <li><a href="#">Термины</a></li>
+                <li><a href="guide.html#hotels">Классификация отелей</a></li>
+                <li><a href="guide.html#rooms">Типы размещений и номеров</a></li>
+                <li><a href="guide.html#meals">Типы питания в отелях</a></li>
+                <li><a href="guide.html#visas">Визы</a></li>
+                <li><a href="#">Другие термины</a></li>
             </ul>
         </div>
         
@@ -330,7 +330,7 @@
                     <li><a href="index.html" class="current">Главная</a></li>
                     <li><a href="#">Подбор тура</a></li>
                     <li><a href="#">Каталог отелей</a></li>
-                    <li><a href="#">Справочник</a></li>
+                    <li><a href="guide.html">Справочник</a></li>
                     <li><a href="contact.html">Контакты</a></li>
                 </ul>
             </div>
