First catalog draft

--- a/ui/guide.html
+++ b/ui/guide.html
@@ -30,7 +30,7 @@
             <ul>
                 <li><a href="index.html">Главная</a></li>
                 <li><a href="#">Подбор тура</a></li>
-                <li><a href="#">Каталог отелей</a></li>
+                <li><a href="catalog.html">Каталог отелей</a></li>
                 <li><a href="#" class="current">Справочник</a></li>
                 <li><a href="contact.html">Контакты</a></li>
             </ul>
